--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ nav .social-media ul li:hover a{
 #websitesProgressBar{
     display: inline-block;
     position: absolute;
-    bottom: 120px;
+    bottom: 115px;
     left: 365px;
     height: 3px;
     width: 0;
@@ -735,7 +735,7 @@ nav .social-media ul li:hover a{
 
 #gamesProgressBar{
     position: absolute;
-    bottom: 120px;
+    bottom: 115px;
     left: 2602px;
     height: 3px;
     width: 0;
@@ -871,7 +871,7 @@ nav .social-media ul li:hover a{
 
 #programsProgressBar{
     position: absolute;
-    bottom: 120px;
+    bottom: 115px;
     left: 5471px;
     height: 3px;
     background: #e2e2f8;
@@ -895,9 +895,13 @@ nav .social-media ul li:hover a{
     margin-bottom: 30px;
 }
 
+.row{
+    display: flex;
+    justify-content: space-around;
+}
+
 .contact-left{
     flex-basis: 30%;
-    margin-left: 6%;
     background: #e2e2f8;
     padding: 60px;
     z-index: 100;
