--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 
 body h1{
     font-weight: 550;
-    font-size: 56px;
+    font-size: 42px;
     color: #e2e2f8;
 }
 
@@ -154,22 +154,20 @@ nav .social-media ul li:hover a{
 .home-logo{
     width: 40%;
     margin-top: 25%;
-    position: fixed;
+    position: relative;
     z-index: 0;
 }
 
 .home-logo img {
     width: 22%;
     position: absolute;
-    border-radius: 50%;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
 }
 
 .home-text{
-    position: absolute;
+    position: fixed;
     margin-top: 30%;
     width: 100%;;
     font-size: 20px;
@@ -177,14 +175,14 @@ nav .social-media ul li:hover a{
     z-index: 100;
 }
 
-.parallax-right{
-    position:absolute;
+.text-right{
+    position: absolute;
     top: 0;
     left: 41%;
 }
 
-.parallax-left{
-    position:absolute;
+.text-left{
+    position: absolute;
     top: 100px;
     left: 41%;
 }
@@ -219,9 +217,8 @@ nav .social-media ul li:hover a{
     margin-bottom: 20px;
 }
 
-.row{
+#about .row{
     display: flex;
-    flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -365,11 +362,8 @@ nav .social-media ul li:hover a{
 }
 
 #services .container{
-    padding: 6% 5% 5% 5%;
+    padding: 50px 5%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 #services h1{
@@ -382,6 +376,7 @@ nav .social-media ul li:hover a{
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 40px;
     color: #1b1729;
+    margin: 10% 0;
 }
 
 .service1{
@@ -883,21 +878,28 @@ nav .social-media ul li:hover a{
 /*------------------------contact-----------------------*/
 
 #contact{
-    padding: 8300px 0 20px 0;
+    padding: 8400px 0 0 0;
     background: #e6e6f3;
 }
 
 #contact .container{
-    padding: 3% 5% 5% 5%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #contact h1{
     margin-bottom: 30px;
 }
 
-.row{
+#contact .row{
+    height: 100%;
+    padding: 0 10%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .contact-left{
@@ -966,7 +968,6 @@ nav .social-media ul li:hover a{
 
 .btn{
     display: block;
-    margin-bottom: 5%;
     width: fit-content;
     background: #80c3b3;
     border: 1px solid #646b89;
@@ -987,7 +988,7 @@ nav .social-media ul li:hover a{
 }
 
 .contact-right form{
-    padding: 30px;
+    padding: 5%;
 }
 
 form input, form textarea{
@@ -1008,10 +1009,10 @@ form textarea{
 }
 
 .copyright{
-    width: 100%;
     text-align: center;
     padding: 50px 0;
     background: #80c3b3;
+    z-index: 0;
 }
 
 .copyright p{
