--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ body h1 span{
     height: 150px;
     border: 10px solid #d3dcdf;
     border-radius: 50%;
-    background: transparent;
     position: absolute;
     pointer-events: none;
     z-index: -1000;
@@ -154,8 +153,8 @@ nav .social-media ul li:hover a{
 .home-logo{
     width: 40%;
     margin-top: 25%;
-    position: relative;
-    z-index: 0;
+    position: fixed;
+    z-index: 1;
 }
 
 .home-logo img {
@@ -1050,7 +1049,11 @@ nav .fas{
     }
 
     #services, #about, #websites, #games, #programs, #contact{
-        padding: 50px 0;
+        padding: 0;
+    }
+
+    #contact{
+        padding-top: 50px
     }
 
     #circle-container {
@@ -1130,7 +1133,7 @@ nav .fas{
         flex-direction: column;
     }    
 
-    .row{
+    #about .row{
         flex-direction: column;
     }
 
@@ -1154,6 +1157,7 @@ nav .fas{
         flex-direction: column;
         align-items: center;
         grid-gap: 60px;
+        margin-left: 0;
     }
 
     .website, .game, .program{
@@ -1175,6 +1179,10 @@ nav .fas{
 
     .websitesDates, .gamesDates, .programsDates, #websitesProgressBar, #gamesProgressBar, #programsProgressBar{
         display: none;
+    }
+
+    #contact .container{
+        height: 100%;
     }
 
     .contact-left, .contact-right{
