--- a/style.css
+++ b/style.css
@@ -341,8 +341,8 @@ nav .social-media ul li:hover a{
 
 .skillcard img{
     margin: 10px 20px;
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     background: #646b89;
     box-shadow: 0px 0px 3px 3px #6e78a5;
@@ -386,11 +386,15 @@ nav .social-media ul li:hover a{
 #services .container{
     padding: 50px 5%;
     height: 100%;
+
 }
 
 #services h1{
+    position: relative;
     color: #1b1729;
     margin-bottom: 80px;
+    z-index: 0;
+
 }
 
 .services-list{
@@ -430,7 +434,7 @@ nav .social-media ul li:hover a{
     font-size: 18px;
     font-weight: 550;
     transition: transform 0.3s, box-shadow 0.3s;
-    z-index: 100;
+    z-index: 0;
     border: solid 2px #e6e6f3;
 
 }
