--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ html {
 }
 
 body {
-  color: #e2e2f8;
+  --color1: #;
+  color: #e6e6f3;
   display: flex;
   flex-direction: column;
   background: #e6e6f3;
@@ -20,7 +21,7 @@ body {
 body h1 {
   font-weight: 550;
   font-size: 42px;
-  color: #e2e2f8;
+  color: #e6e6f3;
 }
 
 body h1 span {
@@ -250,27 +251,27 @@ nav .social-media ul li:hover a {
 
 .tab-titles {
   display: flex;
-  margin: 30px 0 30px;
+  margin: 30px 0;
 }
 
 .tab-links {
   margin-right: 80px;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 500;
-  color: #e2e2f8;
+  color: #e6e6f3;
   cursor: pointer;
   position: relative;
   padding: 15px 15px;
-  border-radius: 10px;
+  border-radius: 8px;
   background: #646b89;
 }
 
 .tab-links:hover {
-  background: #646b8962;
+  background: #37374e;
 }
 
 .tab-links.active-link {
-  background: #646b8962;
+  background: #37374e;
 }
 
 .tab-contents.skills.active-tab {
@@ -308,7 +309,7 @@ nav .social-media ul li:hover a {
 }
 
 .tab-contents ul li span {
-  color: #e2e2f8;
+  color: #e6e6f3;
   font-weight: 500;
   font-size: 20px;
   font-weight: 580;
@@ -346,35 +347,20 @@ nav .social-media ul li:hover a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 40px;
-  color: #1b1729;
+  color: #e6e6f3;
   margin: 10% 0;
 }
 
 .service1 {
-  background: #d47636;
   transform: translateY(-1000px);
-}
-
-.service1 a {
-  color: #d47636;
 }
 
 .service2 {
-  background: #c6aed2;
   transform: translateY(-1000px);
-}
-
-.service2 a {
-  color: #c6aed2;
 }
 
 .service3 {
-  background: #80c3b3;
   transform: translateY(-1000px);
-}
-
-.service3 a {
-  color: #80c3b3;
 }
 
 .services-list div {
@@ -383,7 +369,10 @@ nav .social-media ul li:hover a {
   font-weight: 550;
   transition: box-shadow 0.3s;
   z-index: 0;
-  box-shadow: 0 0 10px #333;
+  box-shadow: 6px 6px 10px #333;
+  background: #646b89;
+  border-radius: 5px;
+  transition: background 0.2s ease-in-out;
 }
 
 .services-list div i {
@@ -401,14 +390,15 @@ nav .social-media ul li:hover a {
   font-size: 15px;
   margin-top: 20px;
   display: inline-block;
+  color: #646b89;
 }
 
 .services-list div:hover {
-  box-shadow: 0px 0px 5px 5px #646b89;
+  background: #37374e;
 }
 
 .services-list div:hover a {
-  color: #1b1729;
+  color: #e6e6f3;
 }
 
 /*------------------------my projects-----------------------*/
@@ -446,7 +436,8 @@ nav .social-media ul li:hover a {
 .work-displayed .media {
   height: 80%;
   width: auto;
-  border: solid 10px #80c3b3;
+  border: solid 10px #646b89;
+  border-radius: 5px;
 }
 
 .work-displayed .work-description {
@@ -485,7 +476,7 @@ nav .social-media ul li:hover a {
 }
 
 .work-displayed .work-description .buttons a:hover {
-  background: #646b8962;
+  background: #37374e;
 }
 
 .work-displayed .work-description .buttons i {
@@ -498,35 +489,39 @@ nav .social-media ul li:hover a {
   margin-top: 20px;
 }
 
-.filter {
+.filters {
   flex-basis: 8%;
   font-size: 18px;
   text-align: center;
   margin-left: 5%;
-  line-height: 1.5;
 }
 
-.filter ul {
+.filters ul {
   list-style: none;
 }
 
-.filter ul li {
+.filter {
   background: #646b89;
-  border-radius: 12px;
+  border-radius: 2px;
   margin: 2px;
+  padding: 5px;
   cursor: pointer;
   transition: background 0.1s ease-in-out;
 }
 
-.filter ul li:hover {
-  background: #646b8962;
+.filter:hover {
+  background: #37374e;
+}
+
+.active-filter {
+  background: #37374e;
 }
 
 .work-scroller {
   display: grid;
   gap: 10px;
   grid-auto-flow: column;
-  grid-auto-columns: 11%;
+  grid-auto-columns: 13%;
   overflow-x: scroll;
   background: #1b1729;
   padding: 10px 20px 10px 10px;
@@ -547,7 +542,7 @@ nav .social-media ul li:hover a {
 
 .work:hover {
   cursor: pointer;
-  background: #646b8962;
+  background: #37374e;
 }
 
 .media {
@@ -605,7 +600,7 @@ nav .social-media ul li:hover a {
 
 .contact-left {
   flex-basis: 30%;
-  background: #e2e2f8;
+  background: #e6e6f3;
   padding: 60px;
   z-index: 100;
   border: solid 2px #d3dcdf;
@@ -618,7 +613,7 @@ nav .social-media ul li:hover a {
 }
 
 .contact-right {
-  background: #e2e2f8;
+  background: #e6e6f3;
   border: solid 2px #d3dcdf;
   flex-basis: 60%;
 }
@@ -670,18 +665,18 @@ nav .social-media ul li:hover a {
 .btn {
   display: block;
   width: fit-content;
-  background: #80c3b3;
+  background: #646b89;
   border: 1px solid #646b89;
   padding: 14px 50px;
   border-radius: 6px;
   text-decoration: none;
-  color: #1b1729;
+  color: #e6e6f3;
   transition: background 0.3s;
   font-size: 16px;
 }
 
 .btn:hover {
-  background: #d47636;
+  background: #37374e;
   cursor: pointer;
 }
 
